# qt1218

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
config/: config.ini
func/: datapage.cpp  datapage.h  homepage.cpp  homepage.h  searchpage.cpp  searchpage.h  syspage.cpp  syspage.h
gui/: data.h  data.ui  home.h  home.ui  homepage.h  homepage.ui  search.h  search.ui  sys.h  sys.ui
inf/: connectThread.cpp  connectThread.h  searchThread.cpp  searchThread.h  test.cpp  test.h
